<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ebookapp.PdfViewActivity">

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdfView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/GoToLastPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pdfView_activity_GotoLastPage"
                android:textSize="18sp" />
            <Button
                android:id="@+id/OpenCatalogue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pdfView_activity_catalogue"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/GoToNextPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pdfView_activity_GotoNextPage"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/pageTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15sp" />
        </LinearLayout>

</LinearLayout>